<resources>
    <string name="app_name">ModernWaiter</string>
    <string name="title_choices">Preferences</string>
    <string name="title_menu">Menu</string>
    <string name="title_order">Order</string>
    <string name="title_pay">Pay</string>
    <string name="pay_for_all"> Pay for All</string>
    <string name="split_evenly">Split Evenly</string>
    <string name="pay_per_item">Pay per Item</string>
    <string name="go_to_menu">Go To Menu</string>
    <string name="add_item">+</string>
    <string name="remove_item">-</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="split_title">Amount to be paid after split</string>
    <string name="get_bill">Initiate Payment</string>
    <string name="thank_you_post_payment">Payment Successful\nHave a great day!</string>
    <string name="pay_again">Pay for more items</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">Checkout</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="view_bill">View Bill</string>
    <string name="view_cart">View Cart</string>
    <string name="title_cart">Cart</string>
    <string name="dotdotdot">...</string>
    <string name="loremIpsum">

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum purus at efficitur egestas. Fusce aliquam, neque vel porttitor rhoncus, ante odio lobortis odio, ac ornare nisl ipsum ac erat. In rhoncus, arcu ac faucibus varius, urna purus scelerisque mauris, id pretium lacus ante a arcu. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis ut risus et quam posuere consequat in sit amet urna. Donec a enim id enim tincidunt porta. Morbi vitae ultrices nisl. Pellentesque imperdiet feugiat sapien, fringilla porta augue commodo sit amet. Sed at ex tincidunt, accumsan eros eu, ultrices mauris. Mauris at tincidunt nisl, id sollicitudin orci. Praesent vestibulum blandit metus a facilisis.

Pellentesque et rutrum eros, eget volutpat dolor. Donec magna eros, consequat vitae consectetur id, maximus ut lacus. Sed posuere, augue quis rhoncus euismod, lacus risus placerat neque, eu sollicitudin nisi dui et lacus. Pellentesque efficitur magna sapien, ut suscipit arcu tincidunt nec. In dui odio, ornare at est non, imperdiet aliquam justo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam in maximus ipsum. Proin luctus ultrices arcu, sit amet mollis neque elementum quis. Ut ut rhoncus arcu. Integer arcu elit, vulputate et efficitur a, lacinia feugiat sapien. Mauris vel libero vitae mi eleifend tincidunt ac vitae ex.

Phasellus eget tincidunt ante. Mauris nec convallis urna, at volutpat turpis. Donec rutrum maximus erat, at suscipit tellus dignissim nec. Quisque commodo tincidunt tortor, et blandit nisi egestas vitae. Nullam tellus nulla, lacinia vel nibh vel, luctus mollis justo. Duis semper odio vitae erat condimentum hendrerit. Fusce scelerisque tincidunt velit, vel laoreet tellus hendrerit condimentum. Cras vel leo ultricies, volutpat tortor vitae, posuere turpis. Fusce in pretium lorem.

Nullam ligula massa, pretium commodo tortor non, suscipit faucibus arcu. Phasellus blandit vestibulum magna, ut consequat libero finibus ac. Aliquam non est risus. Phasellus id nisi malesuada nisi faucibus cursus a at metus. Nunc venenatis pharetra accumsan. Aliquam sit amet tempor orci, nec feugiat arcu. Curabitur velit velit, viverra eget purus ac, porttitor maximus ipsum. Etiam venenatis ultrices diam, hendrerit volutpat leo mattis at.

Proin vel imperdiet lorem. Nulla facilisi. Curabitur sagittis nibh et cursus suscipit. Etiam aliquam scelerisque augue, id eleifend sapien fringilla sit amet. Sed id urna orci. Nunc ac nisi posuere, dictum turpis a, suscipit purus. Vestibulum finibus eu nulla ac mattis. Praesent vulputate, eros ut hendrerit rutrum, mauris sapien finibus orci, quis placerat ante mi a sapien. Maecenas ac nibh velit. Cras euismod, eros non venenatis gravida, eros ligula blandit dolor, et facilisis justo dui ut tortor. Suspendisse libero tellus, lacinia in dignissim a, maximus at libero. Pellentesque a orci et sapien fringilla cursus at id erat. Fusce nibh tortor, vulputate pellentesque fringilla at, cursus eu enim. Donec dapibus cursus magna, in bibendum neque fermentum non. </string>
    <string name="title_activity_barcode">BarcodeActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="server_client_id">1031633982947-6dqn2p8mginechhj7ekn3n231tcsif9e.apps.googleusercontent.com</string>
    <string name="please_sign_in">Please sign in with Google to use the app</string>
    <string name="option">User Options</string>
    <string name="start_demo">Start Demo Restaurant</string>
    <string name="start_barcode">Start Barcode</string>
    <string name="choice_text">CHOICE 1 </string>
    <string name="proceed_to_menu">Proceed to menu</string>
    <string name="loading_user_information">Loading User\nInformation...</string>
    <string name="calorie_count">Calorie:</string>
    <string name="food_type">Type:</string>
    <string name="bill_empty_string">No item ordered yet…\nPlease checkout item to bill</string>
</resources>