<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.ui.payment.MainPaymentFragment">

    <Button
        android:id="@+id/barcode_button"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/blue"
        android:text="@string/pay_for_all"
        app:layout_constraintBottom_toTopOf="@id/option_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/demo_button"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/orange"
        android:text="@string/pay_per_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option_button" />

    <Button
        android:id="@+id/option_button"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/green"
        android:text="@string/split_evenly"
        app:layout_constraintBottom_toTopOf="@+id/demo_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcode_button" />

</androidx.constraintlayout.widget.ConstraintLayout>