<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pay_fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.pay.PayFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="349dp"
            android:layout_height="14dp"
            android:gravity="right"
            android:text="@string/pay_per_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.pay.PayFragment"
        android:background="@color/design_default_color_background">

        <Button
            android:id="@+id/pay_for_all"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/blue"
            android:text="@string/pay_for_all"
            app:layout_constraintBottom_toTopOf="@id/split_evenly"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/pay_per_item"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/orange"
            android:text="@string/pay_per_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/split_evenly" />

        <Button
            android:id="@+id/split_evenly"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/green"
            android:text="@string/split_evenly"
            app:layout_constraintBottom_toTopOf="@+id/pay_per_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pay_for_all" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>