<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/demo_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background" />

    <Button
        android:id="@+id/barcode_button"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/blue"
        android:text="@string/start_barcode"
        android:visibility="invisible"
        android:elevation="1dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:translationZ="1dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/demo_button"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/orange"
        android:text="@string/start_demo"
        android:visibility="invisible"
        android:elevation="1dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:translationZ="1dp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toTopOf="@+id/barcode_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/loadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading_user_information"
        android:textSize="24sp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/demo_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background" />

</androidx.constraintlayout.widget.ConstraintLayout>